--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,3 +28,7 @@
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/brands';
+
+//select2
+@import '~select2/dist/css/select2.min.css';
+@import '~select2-theme-bootstrap4/dist/select2-bootstrap.min.css';
